style changes close issue : change color of horizontal lines and fix spacing #69

--- a/app/renderer/src/assets/sass/new.scss
+++ b/app/renderer/src/assets/sass/new.scss
@@ -866,6 +866,7 @@ h2.title{
     font-weight: 800;
     line-height: $baseline;
     display:inline-block;
+    padding-left: 5px;
 }
 
 .label{
@@ -877,6 +878,10 @@ h2.title{
 }
 
 hr{
-    color: #FFF;
+    margin-top:0;
     margin-bottom:5px;
+    border-color:#ddd;
+    border-style: none;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
 }
